# LearnRebbitMQ

./: README.md  docker-compose.yaml  pyproject.toml  rabbitmq_conf.py
asyncmq/: connection.py  consumer.py  consumer2.py  consumer_with_dead_letter.py  publisher.py  worker.py
consumers/: consumer_base_test_queue.py  consumer_dead_letter_exchange.py  consumer_kyc_email_update_kyc_queue.py  consumer_update_email_new_letter_kyc_queue_.py  consumer_with_dead_letter_exchange.py
consumers_models/: consumer_async_base.py  consumer_base.py  consumer_email_simple_dead_letter_exchange.py  consumer_email_update_kyc.py
publishers/: async_consumer.py  producer_emails.py  producer_with_dead_letter_exchange.py  publisher_test_queue.py
