[tool.poetry]
name = "learnrebbitmq"
version = "0.1.0"
description = ""
authors = ["Miron-Anosov <mairon26rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pika-stubs = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
